Add page documenting keyboard shortcuts (fix #1173)

--- a/_data/docs_navigation.yml
+++ b/_data/docs_navigation.yml
@@ -5,6 +5,7 @@
     - link: /docs/search.html
     - link: /docs/favorites.html
     - link: /docs/website-login.html
+    - link: /docs/shortcuts.html
     - link: /docs/faq.html
 - name: Commands
   children:
