--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,10 @@ addons:
 matrix:
   include:
     - os: linux
-      dist: trusty
+      dist: bionic
       sudo: required
+      services:
+        - xvfb # X is required for tests on Linux
       env:
         - COVERAGE=1
         - PACKAGE=1
@@ -32,11 +34,13 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - *shared_deps
-            - g++-6
+            - g++-7
       env:
-        - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
-      dist: trusty
+        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+      dist: bionic
       sudo: required
+      services:
+        - xvfb # X is required for tests on Linux
     - os: osx
       env:
         - PACKAGE=1
@@ -63,12 +67,6 @@ install:
     ; fi
 
 before_script:
-  # Start X before running tests on Linux
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-      export DISPLAY=:99.0 &&
-      sh -e /etc/init.d/xvfb start &&
-      sleep 3
-    ; fi
   # Set the OpenSSL path on OSX
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
       export OPENSSL_ROOT_DIR=/usr/local/opt/openssl/
