Extract KFL dock logic to its own class

--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -74,6 +74,7 @@ file(GLOB SOURCES
 	"src/main/main.cpp"
 	"src/*.cpp"
 	"src/batch/*.cpp"
+	"src/docks/*.cpp"
 	"src/settings/*.cpp"
 	"src/sources/*.cpp"
 	"src/tabs/*.cpp"
