--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -34,7 +34,7 @@ environment:
       MAKEFILES: MinGW Makefiles
 
 cache:
-  - release\sites\node_modules -> release\sites\package.json
+  - src\sites\node_modules -> src\sites\package.json
   - mysql_driver -> .appveyor.yml
   - apng-1.1.2-65.12.6 -> .appveyor.yml
   - QScintilla_gpl-2.10.8 -> .appveyor.yml
@@ -93,7 +93,7 @@ build_script:
   - if %GRABBER_IS_NIGHTLY%==1 (set "BUILD_TYPE=Release") else (set "BUILD_TYPE=RelWithDebInfo")
   - mkdir build
   - cd build
-  - cmake .. -G "%MAKEFILES%" -DCMAKE_BUILD_TYPE=%BUILD_TYPE% -DNIGHTLY=%GRABBER_IS_NIGHTLY% -DCOMMIT="%APPVEYOR_REPO_COMMIT%" -DVERSION="%GRABBER_VERSION%" -DBREAKPAD="%APPVEYOR_BUILD_FOLDER%/breakpad/src"
+  - cmake ..\src -G "%MAKEFILES%" -DCMAKE_BUILD_TYPE=%BUILD_TYPE% -DNIGHTLY=%GRABBER_IS_NIGHTLY% -DCOMMIT="%APPVEYOR_REPO_COMMIT%" -DVERSION="%GRABBER_VERSION%" -DBREAKPAD="%APPVEYOR_BUILD_FOLDER%/breakpad/src"
   - if not %PLATFORM%==mingw (nmake) else (mingw32-make)
   - cd ..
 
@@ -110,15 +110,17 @@ build_script:
   - if %DEPLOY%==1 iscc /Q /DMyAppVersion="%GRABBER_VERSION%" /DPlatformName="%PLATFORM_NAME%" /DQtDir="%QTDIR%\bin" /DOpenSSLDir="%OPENSSLDIR%" /DMySQLDir="%APPVEYOR_BUILD_FOLDER%\mysql_driver" /DQtApngDll="%APPVEYOR_BUILD_FOLDER%\%APNG_PLUGIN%\5.12.6\msvc2017\plugins\imageformats\qapng.dll" scripts/windows-setup/setup.iss
 
   # Package symbol files to zip
-  - if %DEPLOY%==1 if "%BUILD_TYPE%"=="RelWithDebInfo" 7z a "releases\Grabber_%GRABBER_VERSION%_%PLATFORM_NAME%_symbols.zip" ".\build\gui\Grabber.pdb" ".\build\cli\Grabber-cli.pdb"
+  - if %DEPLOY%==1 if "%BUILD_TYPE%"=="RelWithDebInfo" 7z a "scripts\windows-setup\Grabber_%GRABBER_VERSION%_%PLATFORM_NAME%_symbols.zip" ".\build\gui\Grabber.pdb" ".\build\cli\Grabber-cli.pdb"
 
 test_script:
-  - build\tests\tests.exe -s
+  - cd src
+  - ..\build\tests\tests.exe -s
+  - cd ..
 
 artifacts:
-  - path: releases\Grabber_*.exe
+  - path: scripts\windows-setup\Grabber_*.exe
     name: windows_setup
-  - path: releases\Grabber_*_symbols.zip
+  - path: scripts\windows-setup\Grabber_*_symbols.zip
     name: windows_symbols_zip
 
 deploy:
