--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -9,6 +9,12 @@ find_package(Qt5Sql REQUIRED)
 find_package(Qt5Xml REQUIRED)
 set(QT_LIBRARIES Qt5::Concurrent Qt5::Core Qt5::Gui Qt5::Network Qt5::Qml Qt5::Sql Qt5::Xml)
 
+# Android specials
+if(ANDROID)
+	find_package(Qt5AndroidExtras REQUIRED)
+	set(QT_LIBRARIES ${QT_LIBRARIES} Qt5::AndroidExtras)
+endif()
+
 file(GLOB_RECURSE SOURCES "src/*.cpp")
 include_directories("src/")
 
