--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -23,9 +23,10 @@ jobs:
       run: pip3 install opencv-python opencv-python-headless
 
     - name: Install Qt
-      uses: jurplel/install-qt-action@v2.1.0
+      uses: jurplel/install-qt-action@v2.6.2
       with:
         version: 5.12.6
+        aqtversion: ==0.9
 
     - name: Create build dir
       run: mkdir build
