Fix inconsistent style in a few files

--- a/uncrustify.cfg
+++ b/uncrustify.cfg
@@ -29,6 +29,7 @@ indent_func_call_param = true
 indent_member_single = true
 indent_paren_close = 2
 indent_shift = true
+indent_cpp_lambda_only_once = true
 
 # Keep one line control structures
 nl_func_leave_one_liners = true
@@ -76,7 +77,7 @@ nl_fdef_brace = force # "int foo() {" vs "int foo()\n{"
 sp_sizeof_paren = remove # "sizeof (int)" vs "sizeof(int)"
 sp_before_sparen = force # "if (" vs "if("
 sp_after_sparen = force # "if () {" vs "if (){"
-sp_after_cast = remove # "(int) a" vs "(int)a"
+sp_after_cast = force # "(int) a" vs "(int)a"
 sp_cmt_cpp_start = force # '// A' vs '//A'.
 sp_inside_braces = ignore # "{ 1 }" vs "{1}"
 sp_inside_braces_struct = force # "{ 1 }" vs "{1}"
