--- a/src/sites/package.json
+++ b/src/sites/package.json
@@ -13,9 +13,11 @@
     },
     "devDependencies": {
         "@types/jest": "26.0.3",
+        "@types/xml2js": "^0.4.5",
         "jest": "26.1.0",
         "ts-jest": "26.1.1",
         "tslint": "6.1.2",
-        "typescript": "3.9.6"
+        "typescript": "3.9.6",
+        "xml2js": "^0.4.23"
     }
 }
