--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -54,6 +54,7 @@ init:
 
 install:
   - git submodule update --init --recursive
+  - ps: Install-Product node 10
 
 build_script:
   # Download Google tools and put them in the PATH (required for Google Breakpad)
