--- a/docs/_data/docs_navigation.yml
+++ b/docs/_data/docs_navigation.yml
@@ -3,6 +3,7 @@
     - link: /docs/
     - link: /docs/filename.html
     - link: /docs/search.html
+    - link: /docs/sources.html
     - link: /docs/favorites.html
     - link: /docs/website-login.html
     - link: /docs/shortcuts.html
