Add @ccppoo to the contributors for the Korean translation

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -120,6 +120,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "ccppoo",
+      "name": "ccppoo",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/46418312?s=122",
+      "profile": "https://github.com/ccppoo",
+      "contributions": [
+        "translation"
+      ]
     }
   ]
 }
