--- a/.gitattributes
+++ b/.gitattributes
@@ -2,8 +2,8 @@
 *.sh eol=lf
 
 # Ignore vendor files
-src/cmake/*
-scripts/windows-setup/scripts/*
+src/cmake/* linguist-vendored
+scripts/windows-setup/scripts/* linguist-vendored
 
 # Docs and translations should be ignored
 docs/* linguist-documentation
