Add documentation about configuration files (issue #2097)

--- a/docs/_data/docs_navigation.yml
+++ b/docs/_data/docs_navigation.yml
@@ -34,4 +34,5 @@
     - link: /docs/compilation.html
     - link: /docs/cli.html
     - link: /docs/portable-version.html
+    - link: /docs/configuration-files.html
     - link: /docs/telemetry.html
