--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -38,9 +38,17 @@ jobs:
       shell: cmd
       run: mkdir vendor
 
+    - name: Cache Qt
+      id: cache-qt
+      uses: actions/cache@v1
+      with:
+        path: ../Qt
+        key: ${{ runner.os }}-QtCache-${{ hashFiles('.github/workflows/windows.yml') }}
+
     - name: Install Qt
       uses: jurplel/install-qt-action@v2.7.2
       with:
+        cached: ${{ steps.cache-qt.outputs.cache-hit }}
         version: 5.12.6
 
     - name: Build QScintilla
