--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -55,3 +55,13 @@ jobs:
 
     - name: Generate package
       run: ./scripts/package-linux.sh
+
+    - name: Nightly
+      uses: ncipollo/release-action@v1
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        tag: nightly-github
+        allowUpdates: true
+        draft: true
+        prerelease: true
+        artifacts: Grabber.tar.gz
