--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -51,3 +51,13 @@ jobs:
 
     - name: Generate package
       run: ./scripts/package-mac.sh
+
+    - name: Nightly
+      uses: ncipollo/release-action@v1
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        tag: nightly-github
+        allowUpdates: true
+        draft: true
+        prerelease: true
+        artifacts: Grabber.dmg
