Don't draft github nightlies

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -84,6 +84,6 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
         tag: nightly-github
         allowUpdates: true
-        draft: true
+        draft: false
         prerelease: true
         artifacts: Grabber_*.apk
