--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -64,6 +64,6 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
         tag: nightly-github
         allowUpdates: true
-        draft: true
+        draft: false
         prerelease: true
         artifacts: Grabber_*.tar.gz
