--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -60,6 +60,6 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
         tag: nightly-github
         allowUpdates: true
-        draft: true
+        draft: false
         prerelease: true
         artifacts: Grabber_*.dmg
