--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -59,7 +59,13 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         tag: nightly-github
+        name: Nightly (Github)
         allowUpdates: true
         draft: false
         prerelease: true
         artifacts: Grabber_*.dmg
+        body: |
+          Nightly automated builds from the develop branch.
+          Automatically uploaded by Github actions, **use at your own risk**!
+
+          **Head:** ${{ env.GITHUB_SHA }}
