--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -134,6 +134,7 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         tag: nightly-github
+        name: Nightly (Github)
         allowUpdates: true
         draft: false
         prerelease: true
@@ -142,4 +143,4 @@ jobs:
           Nightly automated builds from the develop branch.
           Automatically uploaded by Github actions, **use at your own risk**!
 
-          **Head:** %GITHUB_SHA%
+          **Head:** ${{ env.GITHUB_SHA }}
