--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -14,10 +14,10 @@ jobs:
 
     - name: Set environment
       run: |
-        echo ::set-env name=GRABBER_VERSION::nightly
-        echo ::set-env name=GRABBER_IS_NIGHTLY::1
-        echo ::set-env name=PLATFORM_NAME::x64
-        echo ::set-env name=OPENSSL_ROOT_DIR::/usr/local/opt/openssl/
+        echo "GRABBER_VERSION=nightly" >> $GITHUB_ENV
+        echo "GRABBER_IS_NIGHTLY=1" >> $GITHUB_ENV
+        echo "PLATFORM_NAME=x64" >> $GITHUB_ENV
+        echo "OPENSSL_ROOT_DIR=/usr/local/opt/openssl/" >> $GITHUB_ENV
 
     - name: Cache Qt
       id: cache-qt
