--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -19,12 +19,12 @@ jobs:
     - name: Set environment
       shell: cmd
       run: |
-        echo ::set-env name=GRABBER_VERSION::nightly
-        echo ::set-env name=GRABBER_IS_NIGHTLY::1
-        echo ::set-env name=PLATFORM_NAME::x64
-        echo ::set-env name=OPENSSL_ROOT_DIR::%GITHUB_WORKSPACE%\vendor\OpenSSL
-        echo ::set-env name=MYSQL_DRIVER_DIR::%GITHUB_WORKSPACE%\vendor\MySQL_driver
-        echo ::set-env name=APNG_PLUGIN_DLL::%GITHUB_WORKSPACE%\vendor\APNG\5.12.6\msvc2017\plugins\imageformats\qapng.dll
+        echo "GRABBER_VERSION=nightly" >> %GITHUB_ENV%
+        echo "GRABBER_IS_NIGHTLY=1" >> %GITHUB_ENV%
+        echo "PLATFORM_NAME=x64" >> %GITHUB_ENV%
+        echo "OPENSSL_ROOT_DIR=%GITHUB_WORKSPACE%\vendor\OpenSSL" >> %GITHUB_ENV%
+        echo "MYSQL_DRIVER_DIR=%GITHUB_WORKSPACE%\vendor\MySQL_driver" >> %GITHUB_ENV%
+        echo "APNG_PLUGIN_DLL=%GITHUB_WORKSPACE%\vendor\APNG\5.12.6\msvc2017\plugins\imageformats\qapng.dll" >> %GITHUB_ENV%
 
     - name: Vendor cache
       uses: actions/cache@v1
