--- a/src/gui-qml/CMakeLists.txt
+++ b/src/gui-qml/CMakeLists.txt
@@ -66,8 +66,8 @@ if(ANDROID)
 		VERSION_CODE ${ANDROID_APP_VERSION_CODE}
 		PACKAGE_NAME ${ANDROID_APP_PACKAGE_NAME}
 		PACKAGE_SOURCES ${ANDROID_PACKAGE_SOURCES}
-		# KEYSTORE key.keystore alias
-		# KEYSTORE_PASSWORD *****
+		KEYSTORE "${CMAKE_CURRENT_LIST_DIR}/../../release.jks" release
+		KEYSTORE_PASSWORD ${KEYSTORE_PASSWORD}
 		DEPENDS ${ANDROID_EXTRA_LIBS})
 	add_dependencies("${PROJECT_NAME}_apk" android_copy_assets_qml)
 endif()
