--- a/.github/workflows/uncrustify.yml
+++ b/.github/workflows/uncrustify.yml
@@ -23,6 +23,9 @@ jobs:
       if: steps.bin-cache.outputs.cache-hit != 'true'
       run: |
         git clone https://github.com/uncrustify/uncrustify.git uncrustify_git
+        cd uncrustify_git
+        git checkout 8edb7262e855c4271e9e5fc26af93861103e14fa
+        cd ..
         mkdir uncrustify_build
         cd uncrustify_build
         cmake ../uncrustify_git
