Use Qt 5.15.1 for Github build and build QtAPNG in CI

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -28,12 +28,12 @@ jobs:
         key: ${{ runner.os }}-QtCache-${{ hashFiles('.github/workflows/android.yml') }}
 
     - name: Install Qt
-      uses: jurplel/install-qt-action@v2
+      uses: jurplel/install-qt-action@v2.9.0
       with:
         cached: ${{ steps.cache-qt.outputs.cache-hit }}
-        version: 5.12.6
+        version: 5.15.1
         target: android
-        arch: android_armv7
+        arch: android
 
     - name: Create build dir
       run: mkdir build
