--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: windows-2019
 
     env:
-      MYSQL_DRIVER_URL: https://github.com/thecodemonkey86/qt_mysql_driver/files/4114066/qsqlmysql.dll_Qt_SQL_driver_5.12.6_MSVC2017_64-Bit.zip
+      MYSQL_DRIVER_URL: https://github.com/thecodemonkey86/qt_mysql_driver/files/5198020/qsqlmysql.dll_Qt_SQL_driver_5.15.1_MSVC2019_64-Bit.zip
       QSCINTILLA_VERSION: QScintilla_gpl-2.10.8
 
     steps:
@@ -24,7 +24,7 @@ jobs:
         echo PLATFORM_NAME=x64 >> %GITHUB_ENV%
         echo OPENSSL_ROOT_DIR=%GITHUB_WORKSPACE%\vendor\OpenSSL >> %GITHUB_ENV%
         echo MYSQL_DRIVER_DIR=%GITHUB_WORKSPACE%\vendor\MySQL_driver >> %GITHUB_ENV%
-        echo APNG_PLUGIN_DLL=%GITHUB_WORKSPACE%\vendor\APNG\5.12.6\msvc2017\plugins\imageformats\qapng.dll >> %GITHUB_ENV%
+        echo APNG_PLUGIN_DLL=%GITHUB_WORKSPACE%\vendor\APNG\plugins\imageformats\qapng.dll >> %GITHUB_ENV%
 
     - name: Vendor cache
       uses: actions/cache@v1
@@ -46,10 +46,10 @@ jobs:
         key: ${{ runner.os }}-QtCache-${{ hashFiles('.github/workflows/windows.yml') }}
 
     - name: Install Qt
-      uses: jurplel/install-qt-action@v2.7.2
+      uses: jurplel/install-qt-action@v2.9.0
       with:
         cached: ${{ steps.cache-qt.outputs.cache-hit }}
-        version: 5.12.6
+        version: 5.15.1
 
     - name: Build QScintilla
       if: steps.vendor-cache.outputs.cache-hit != 'true'
@@ -90,14 +90,17 @@ jobs:
         7z x "mysql_driver.zip" -y -o"%MYSQL_DRIVER_DIR%"
         rm "mysql_driver.zip"
 
-    - name: Download APNG plugin
+    - name: Build APNG plugin
       if: steps.vendor-cache.outputs.cache-hit != 'true'
       working-directory: vendor
       shell: cmd
       run: |
-        curl -Lo APNG.7z https://install.skycoder42.de/qtmodules/windows_x86/qt5126/qt.qt5.5126.skycoder42.apng.win32_msvc2017/1.1.2-65.12.6.7z
-        7z x APNG.7z -y -oAPNG
-        rm APNG.7z
+        git clone https://github.com/Skycoder42/QtApng APNG
+        cd APNG
+        git checkout $(git tag | tail -1)
+        call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
+        qmake "CONFIG += libpng_static"
+        nmake
 
     - name: Create build dir
       shell: cmd
