Don't try to release nightly on Github on PR

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -56,6 +56,7 @@ jobs:
 
     - name: Nightly
       uses: ncipollo/release-action@v1
+      if: ${{ github.event_name != 'pull_request' }}
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         tag: nightly-github
